--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -39,11 +39,11 @@ body {
 }
 
 body {
-  background-color: var(--color-dark-green);
+  background-color: var(--color-dark);
   font-size: 18px;
   font-weight: 400;
   color: var(--color-white);
-  font-family: "Roboto Condensed", serif;
+  font-family: "Roboto", serif;
 }
 
 .line {
@@ -54,7 +54,7 @@ body {
 }
 
 .line:hover {
-  color: var(--color-light-blue);
+  color: var(--color-white);
 }
 
 .line::after {
@@ -64,7 +64,7 @@ body {
   bottom: -3px;
   width: 100%;
   height: 2px;
-  background: var(--color-light-blue);
+  background: var(--color-white);
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 0.4s ease-in-out;
@@ -80,13 +80,12 @@ body {
 /* var-color */
 :root {
   --color-white: #FFFFFF;
-  --color-amber: #E68A00;
-  --color-amber-hover: #FF9F1C;
-  --color-light-blue: #66D9EF;
-  --color-gray: #6b6d7c;
-  --color-dark-green: #0B1C19;
-  --color-underlay: #162824;
-
+  --color-yellow: #EDC32D;
+  --color-yellow-hover: #F5D741;
+  --color-gray: #A5A5A5;
+  --color-dark: #000000;
+  --color-underlay: #0A0A0A;
+  --color-secondary-underlay: #141414;
 }
 
 /* @media (max-width: 991px) {
